<resources>
	<string name="app_name">Fruitpedia</string>
	<string name="tab_FruitList">水果列表</string>
	<string name="tab_Bulletin">佈告欄</string>
	<string name="tab_Favorites">我的最愛</string>
	<string name="actionbar_search">尋找水果</string>
	<string name="actionbar_refresh">佈告欄更新</string>
	<string name="menu_info">關於</string>
	<string name="actionbar_addToFavorites">加入我的最愛</string>
	<string name="menu_clearFavorite">清空我的最愛</string>
	<string name="search_hint">輸入要查詢的水果..</string>
	<string name="infoDialog">Fruitpedia 水果百科 \n\n
	    					   # 部落格\n
	    					  http://fruitpedia.blogspot.tw/\n\n
	    					   #水果資訊取自松青超市官網 \n
	    					   食材百科事典\n\n
	    					  [1.0]\n
	    					  1.程式初版

	    					  </string>
	<string name="textviewPrompt_fruit">點選水果進入詳細說明</string>
	<string name="imageview_ContDesc">圖示</string>
	<string-array name="strArray_FruitList">
		<item>蘋果 Apple</item>
		<item>酪梨 Avocado</item>
		<item>香蕉 Banana</item>
		<item>藍莓 Blueberry</item>
		<item>哈密瓜 Cantaloupe</item>
		<item>櫻桃 Cherry</item>
		<item>蔓越莓 Cranberry</item>
		<item>榴槤 Durian</item>
		<item>葡萄柚 Grapefruit</item>
		<item>葡萄 Grapes</item>
		<item>芭樂 Guava</item>
		<item>奇異果 Kiwi</item>
		<item>檸檬 Lemon</item>
		<item>荔枝 Lychee</item>
		<item>芒果 Mango</item>
		<item>柳丁 Orange</item>
		<item>木瓜 Pagaya</item>
		<item>水蜜桃 Peach</item>
		<item>水梨 Pear</item>
		<item>柿子 Persimmon</item>
		<item>鳳梨 Pineapple</item>
		<item>楊桃 Starfruit</item>
		<item>草莓 Strawberry</item>
		<item>橘子 Tangerine</item>
		<item>番茄 Tomato</item>
		<item>西瓜 Watermelon</item>
	</string-array>
	<string name="menu_settings">設定</string>
	<string name="placeOfProduction">產地</string>
	<string name="season">產季</string>
	<string name="nutrition">營養價值</string>
	<string name="feature">特色介紹</string>
	<string name="pick">選購秘訣</string>
	<string name="remind">貼心叮嚀</string>
	<string name="apple_title">蘋果 Apple</string>
	<string name="apple_placeOfProduction">蘋果有進口及省產之分，進口常見品種以加拉、富士、陸奧為主，多自日本、美國、智利進口；本省品種則以黃元帥居多，主要產區在中部海拔1,800～2,400公尺之高山區，種植面積以臺中縣最多，次為南投縣。</string>
	<string name="apple_season">採收期因品種而異，一般早熟期可在9月下旬開始採收，晚熟種可延至11月。</string>
	<string name="apple_nutrition">蘋果有「果中之王」的美譽，富含多種維生素有促進食慾、幫助消化的作用。一顆蘋果就含有20%每日需要的膳食纖維含量，因為富含的維生素C與果膠，多吃蘋果可保持骨骼與牙齒的健康。對於開始吃固體食物的嬰兒可以餵食切成小片的蘋果片或稀狀的蘋果泥，最適合嬰兒和病患食用。</string>
	<string name="apple_feature">世界上蘋果之品種多達六千餘種，但實際有經濟栽培價值者僅百餘種。果實有球形、橢圓形、近圓形等。果實顏色繁多，有金黃、紫紅、青綠等。果肉有脆、堅實和密緻之別，風味甚佳。</string>
	<string name="apple_pick">選擇表皮明亮有光澤、摸起來結實飽滿，而且沒有碰撞傷痕的蘋果。</string>
	<string name="apple_remind">貯放於冰箱冷藏，以維持蘋果的香脆及多汁。蘋果當然以生吃或拌成沙拉食用最好，但如果您想煮食蘋果，最好使用不鏽鋼鍋並且以小火煮熟。這種方法可以使蘋果裡的維他命，礦物質和其他營養成分不至於喪失太多。</string>
	<string name="avocado_title">酪梨 Avocado</string>
	<string name="avocado_placeOfProduction">酪梨原產於中美洲，在當地有"窮人的奶油"之稱。目前酪梨栽培已普及熱帶亞熱帶地區，其主要栽培地區有以色列，南非、智利、墨西哥及美國。台灣在日人治台時引入，後又陸續從美國引入多個品種，臺灣目前以嘉南地區為主要產地。</string>
	<string name="avocado_season">早熟品種於6~8月，中熟品種於8~10月、晚熟品種於12~2月採收。</string>
	<string name="avocado_nutrition">酪梨含有人體所需要的全部養份，可作為主食，也可當蔬果，和其他的水果相比，酪梨的營養價值在水果類中居冠，每天吃半個酪梨，可以提供人體每日所需的維他命A、C、E、菸鹼酸、葉酸及鎂等。酪梨糖分含量低，植物性脂肪高，多為單不飽和脂肪酸，不含膽固醇，是金氏世界紀錄記載最營養的水果，對人體具有保健效用。</string>
	<string name="avocado_feature">酪梨是很特殊的水果，營養特高，幾乎不含澱粉及糖分，因此沒有甜味，食用之口感，完全靠成熟時才能吃出味道來。酪梨吃法形形色色，其用途大致可做開胃菜、飲料、沾醬、沙拉調味醬、三明治、壽司、湯等。目前在台灣流行吃法為將果肉、牛奶、糖、或蜂蜜、布丁等加入果汁機後打成酪梨奶昔；或直接鮮食，也可沾蒜蓉醬油、芥末、美奶滋食用。</string>
	<string name="avocado_pick">酪梨從樹上採下來後，需經後熟作用變軟才能食用；將酪梨握於掌心，以姆指壓果實，如感覺可繼續壓入，而不會彈起，則已可食用。有些品種的酪梨在變軟時果皮會變成紅到紫色，有些則不會。硬的酪梨於室溫下，通常4至7天即可後熟變軟，千萬不要一買回來，就放在冰箱內儲藏，否則會受寒害，而無法正常後熟。</string>
	<string name="avocado_remind">酪梨是高營養果實，含有比普通水果多四倍的卡路里，故在營養學上是被歸為油脂類，也就是吃半顆酪梨就等於吃了一碗飯的熱量，因此，健康的人一天只吃 1/4顆便足夠了，如果在每日的食用量上不做限制，很快的體重就會上升，所以要注意節制食用量。</string>
	<string name="banana_title">香蕉 Banana</string>
	<string name="banana_placeOfProduction">香蕉起初從大陸福建引進栽種，因氣候得宜與人工栽培技術純熟，產出的香蕉香甜豐腴，特別受到日本的青睞，也為台灣贏得香蕉王國的稱號。台灣香蕉的產地大多集中在屏東、高雄、南投、台中、台南一帶，雖今產量不如以往豐沛，但香蕉仍是外銷生鮮農產品之大宗。</string>
	<string name="banana_season">每年二月底到六月底是台灣香蕉主要產季，七月進入雨季，香蕉含水量大，品質不好，也不耐久藏，產量較少。</string>
	<string name="banana_nutrition">香蕉營養價值甚高，膳食纖維能促進腸胃蠕動，改善便秘；維生素B與檸檬酸能幫助消除疲勞；鉀離子則能幫助排出體內多餘的鹽分、幫助新陳代謝。因此從小孩到老年人，都能安心食用，以補充均衡的營養。</string>
	<string name="banana_feature">香蕉常見有土蕉及芭蕉兩類，土蕉果形呈弓形，果指長20至25公分，肉呈淡黃色，氣味細緻香甜；芭蕉果指短小，熟後呈深黃色，黃白色果肉，香氣微淡，口感甜中帶酸，深受歡迎。</string>
	<string name="banana_pick">香蕉選購時依季節不同各有標準，如春冬季，宜選果指根根渾圓、稜線柔和、顏色較黃者，夏季因香蕉熟得快，則宜選擇黃中帶青，稜線仍清楚可辨者才耐放。表皮如出現芝麻斑便已熟透，口感鬆軟。香蕉最怕瘀傷，選購時避免碰撞，免得入口時甜美風味大打折扣！</string>
	<string name="banana_remind">腎功能不好者，不宜多吃。因含鉀量較高，空腹吃香蕉易讓血液中含鎂量遽升，故最好不要空腹食用。另骨折、筋骨扭傷者不宜食用香蕉，因香蕉中磷質含量稍高，容易造成體內鈣質降低，不利骨折之復原。</string>
	<string name="blueberry_title">藍莓 Blueberry</string>
	<string name="blueberry_placeOfProduction">藍莓主要產地在北美洲，台灣早先引進藍莓時，以清境農場等高冷地帶為主要種植區域，產量不大。可區分為野生種與栽培種，野生藍莓屬於「矮叢藍莓」，不僅體型較小，也擁有更強烈的味道與顏色。</string>
	<string name="blueberry_season">藍莓的產季從每年五月到十月，在七月達最高峰。</string>
	<string name="blueberry_nutrition">藍莓富含花青素，可防止心血管發生病變，還可強化維他命C的效力，使身體組織下的膠原蛋白維持穩定，想要維持青春美麗的人千萬不能錯過！此外，藍莓還可預防腦神經老化、強心、增強人體免疫力，極具營養保健作用，近年來成為風靡歐美日的健康水果。</string>
	<string name="blueberry_feature">藍莓含有花青素、前花青素、類黃酮素、酚酸類等營養成分，在所有水果中的抗氧化能力堪稱第一，而有抗氧化發電機的封號。</string>
	<string name="blueberry_pick">選購時以果實觸感堅實、顏色均勻，且表面有白色果粉者為佳。若已分裝在盒中，可輕搖盒身，觀察藍莓果實的滾動是否輕盈，若有黏滯感，表示新鮮度較差。</string>
	<string name="blueberry_remind">成熟新鮮的藍莓要儘早食用，吃不完時，可將有損傷或長黴的果實挑掉，放入有蓋的容器中冷藏，約可保存一星期左右。</string>
	<string name="cantaloupe_title">哈密瓜 Cantaloupe</string>
	<string name="cantaloupe_placeOfProduction">哈密瓜原名為洋香瓜，原產於中東和非洲，傳入中國的新疆哈密一帶，出產的哈密瓜，香甜如甘貽，進而發揚光大，馳名國際。台灣主要產地在台南、嘉義、雲林、宜蘭、屏東。</string>
	<string name="cantaloupe_season">台灣一般播種期為9月至翌年1月，盛產期為3～11月，以春秋的產量最為豐碩。</string>
	<string name="cantaloupe_nutrition">哈密瓜主要成分為水分。食用時，果汁十分豐富。哈密瓜的甜味來自糖質，另外，還含有胡蘿蔔素、鉀，以及鐵和鈣質。含有高量的維他命A及維他命C，是養顏美容的好東西，維他命A讓皮膚水嫩，維他命C讓皮膚白晰有彈性，可說是一種吃的保養品。</string>
	<string name="cantaloupe_feature">哈密瓜性喜充足的陽光和較大的晝夜溫差，白天可以充分發揮光合作用，而夜晚的呼吸消耗較小，因此糖分含量高，味極香甜。果皮表面有網紋，果肉有綠色、白色、橙色等多品種。</string>
	<string name="cantaloupe_pick">宜選擇果皮網狀紋路均勻清晰、果蒂連於果身者，富重量感和光澤，並散發出濃郁果香者。放在室溫下直至成熟，下方變軟，散發出香味時，就可食用。</string>
	<string name="cantaloupe_remind">在水果中，哈密瓜的鉀含量算是較高的，由於腎臟病患者排泄鉀的能力下降，因此腎臟病患者或飲食需限制鉀的人不可多吃。</string>
	<string name="cranberry_title">蔓越莓 Cranberry</string>
	<string name="cranberry_placeOfProduction">蔓越莓主要產地在北美洲少數地區，由於果實，小小、圓圓、表皮又呈美麗的鮮紅色, 因此又被稱為小紅莓。蔓越莓需要特殊的環境及氣候條件，因此全球產區不到4萬英畝，產量有限、十分珍貴，因而有「北美的紅寶石」之稱。</string>
	<string name="cranberry_season">美國主要的產期為5~10月，每年收成季節，已成為北美當地的觀光賣點之一。</string>
	<string name="cranberry_nutrition">蔓越莓所含有的花青素可以包裹住大腸桿菌，使細菌無法在尿道停留造成感染，所以尿道容易發炎的人多吃蔓越莓，有助於預防反覆感染。而花青素也能增加血管彈性、抗氧化，可保護心血管的健康。</string>
	<string name="cranberry_feature">蔓越苺不僅富含維他命C，更含有豐富的植化素，包含花青素、前花青素、鞣花酸等等，可說是超級抗氧化劑。</string>
	<string name="cranberry_pick">挑選色澤明亮、飽滿結實的。一般來說，顏色越深紅，其中花青素的含量也越高。</string>
	<string name="cranberry_remind">將蔓越莓置於袋中，可在冰箱中冷藏保存二到三週；在不開封的情況下，則可在冷凍中貯存約九個月之久。</string>
	<string name="durian_title">榴槤 Durian</string>
	<string name="durian_placeOfProduction">榴槤源自於婆羅洲郡島，在東南亞的赤道地帶，凡印度、緬甸、泰國、印尼、馬來西亞、越南、菲律賓都有種植、生長。其中以泰國產量最大，品質優良，出口最多。榴槤種類繁多，不下百種，台灣引進最多的有金枕頭(Monthong)、青尼(Chanee)及干倫(Kanron)三種，金枕頭是最早被引進的品種，外型碩大成橢圓狀、粗刺、尾錐凸出、果肉呈淡黃色、肉多籽小，在眾榴槤中，可謂味道清淡，也許是這原故，已成為台灣人最喜愛的品種。</string>
	<string name="durian_season">榴槤的產期全年都有，但若以泰國最大的產地羅勇、尖不里算，則其盛產期在3~6月之間，干倫在3月上旬盛產，青尼於3月下旬~4月中旬盛產，而金枕頭於4月中旬盛產後可一直延續至6月。而泰南產量亦豐，因此最多可持續至9月。</string>
	<string name="durian_nutrition">榴槤富含蛋白質、醣類、維生素、鉀、磷、鎂等礦物元素，每百克果肉能產生162g大卡的熱量。榴槤有開胃、促進消化之效，所含膳食纖維能促進腸胃蠕動。此外，榴槤含多量的蛋白質和脂肪，具有滋補保養、加強血液循環的功能。因此，和榴槤有關的祕方一籮筐，舉凡治嗽、補虛、養顏不一而足。</string>
	<string name="durian_feature">水果之王─榴槤，有人奉它為人間美味，也有人見了它掩鼻就逃，是一種熱帶水果。它的體積大，多刺及在成熟時散發濃郁的香味，因此被稱之為果中之王。因為它的氣味特殊，聞起來奇臭無比，吃起來卻香醇如蜜、軟滑如膏，如同臭豆腐一樣，只要嚐過的人多會被它特殊的風味所吸引，有愈來愈多的逐臭老饕加入選購的行列。</string>
	<string name="durian_pick">在採購時要注意選果皮巳呈黃褐色，果大端正，近果柄處氣味濃烈者為佳；果皮發青者尚未成熟，不宜選購。購回之果可用數張報紙包住，以防果刺傷人。果皮剝開後當天應把果肉食用完畢或冷凍備用，不宜冷藏久貯。</string>
	<string name="durian_remind">沒剖過榴槤的人，可從尾錐沿著果峰最凸出處到果柄之間的一條直線，憑肉眼亦可看出這條線的存在，榴槤自動裂開時一定沿著這條線裂開。同樣的，要剖榴槤時，只要沿著那條線劃上一刀，然後用雙手扳開，自然美食就在眼前了。</string>
	<string name="grapefruit_title">葡萄柚 Grapefruit</string>
	<string name="grapefruit_placeOfProduction">原產馬來西亞及東印度群島等地，主要產地為美國，佔全世界總產量約百分之五十左右，台灣主要產地在台南、嘉義、雲林、南投縣等山區，其中有包括白肉、紅肉、粉紅肉三種。</string>
	<string name="grapefruit_season">葡萄柚每年8月~12月皆有生產，盛產期為10~11月。</string>
	<string name="grapefruit_nutrition">葡萄柚含有豐富的維生素B1、B2、C，以及檸檬酸、鈉、鉀和鈣，檸檬酸有助於肉類的消化。果實含豐富果酸，能生津止渴、消暑降火氣、幫助消化以及潤膚減肥。故在減重上可幫助脂肪代謝，是相當受歡迎的水果。</string>
	<string name="grapefruit_feature">葡萄柚是一種大型的柑橘類水果，國內葡萄柚進口以美國為最大供應國，其運用早晚熟品種及改進採後處理技術，可以全年供應。 且由於它的卡路里較低，所以常被使用在減肥食譜中。</string>
	<string name="grapefruit_pick">選購葡萄柚以果大豐圓，果皮光滑者為佳，紅肉較受市場歡迎。選購祕訣在於成熟適度，形狀完整，色澤優良，外皮光滑清潔，無腐爛、無病蟲害及其他傷害。果皮有深紅色暈斑或有淡紅色油胞者為紅肉種。油胞呈白色者為白肉種。</string>
	<string name="grapefruit_remind">睡前喝一杯葡萄柚汁可幫助睡眠，早上喝一杯葡萄柚汁可預防便秘。較甜的水果和澱粉類食物會使葡萄柚變得較不容易消化吸收，因此應避免和這類水果和食物混合一起吃。</string>
	<string name="cherry_title">櫻桃 Cherry</string>
	<string name="cherry_placeOfProduction">台灣進口的甜櫻桃大都產自美國加州及華盛頓州，較常見的品種以Bing、Brooks、Tular..等品種，櫻桃的種植不易，採收又費時費事，即使是在原產地，櫻桃都算是一種價格較昂貴的水果。</string>
	<string name="cherry_season">加州櫻桃產期較早約4~6月，再者6月份才有華盛頓櫻桃大量產出，至於女性朋友們喜歡的白 櫻桃，需至6~7月才會有合理的價格。</string>
	<string name="cherry_nutrition">櫻桃不只好吃，還含有豐富的營養素。不僅不含脂肪、卡路里低，還含蛋白質、糖、磷、鐵、胡蘿蔔素及維生素C等。其中鐵含量較高，比蘋果、梨要高二十倍以上，居水果之首，具有很好的通便效果及造血功能。</string>
	<string name="cherry_feature">嬌嫩欲滴的櫻桃，心型的外表與酸甜可口的滋味，除鮮食外，可製成果醬、罐頭等。櫻桃要新鮮才好吃，新鮮的櫻桃粒粒硬度脆度都足夠，加上酸甜互相激盪的口感，相當可口美味。</string>
	<string name="cherry_pick">要儘量挑選大顆結實，表皮光滑色澤漂亮的櫻桃。</string>
	<string name="cherry_remind">每一株櫻桃樹，要成長到可以生產櫻桃，要花上將近10年的時間；而每一株櫻桃樹的壽命，只有25年，也就是說， 25年之後，這株櫻桃樹就不再賦有生產能力而遭到淘汰，這是櫻桃果農們保持櫻桃品質的秘訣。</string>
	<string name="grapes_title">葡萄 Grapes</string>
	<string name="grapes_placeOfProduction">葡萄佔全世界水果生產量約四分之一，分食用品系和釀酒品系，以法國、義大利產量最多。台灣以苗栗縣、台中縣和彰化縣栽培面積最大。較具知名度的品種有紅地球葡萄及巨峰葡萄。</string>
	<string name="grapes_season">一般平地葡萄產季夏果約在6月～8月，再加上9到10月的秋果，還有12月到隔年1月的冬果，葡萄產季幾乎沒有空檔。</string>
	<string name="grapes_nutrition">葡萄為多汁漿果，富含甜份，主要為葡萄糖和果糖，有消除疲勞的特效性，且含多量鐵質，是病中病後恢復體力、預防貧血的聖品。葡萄除了好吃之外，卡路里低、不含脂肪，富含維生素C，以及多種能降低人體飽和脂肪、膽固醇，有助於預防心臟血管疾病。</string>
	<string name="grapes_feature">葡萄顆顆晶瑩玲瓏可愛，纍纍成穗富麗令人垂涎欲滴。世界名酒都出於葡萄之造，鮮果美味可口，乾果別有風味，果汁清涼宜人，果醬調食最佳，對於人類的利用價值連城。</string>
	<string name="grapes_pick">挑選外表結實飽滿、顏色呈現深紫色，而且果實成串不掉落者。挑選葡萄時，建議最好選擇小串一點的葡萄，主要是因為愈大串的葡萄，營養與甜份都較容易分散，反而不如小串一點的葡萄來得顆顆夠味兒，口感香甜、微酸，肉質又Q，濃郁的葡萄香在嘴中久久不散。</string>
	<string name="grapes_remind">清洗後，用篩子瀝乾葡萄與水，用一個平底鍋的鍋蓋，撲上一條乾淨的毛巾，將瀝乾的葡萄倒入其中，前後搖動，使葡萄均勻滾動，殘存的水分就可以吸乾了。另外，葡萄要吃的時候再洗，因為洗過後不吃容易壞掉。</string>
	<string name="guava_title">芭樂 Guava</string>
	<string name="guava_placeOfProduction">芭樂原產於熱帶美洲，由歐洲輾轉傳入馬尼拉、南洋、印度，再由南洋傳入廣東，因為它的果實有很多籽，類似石榴，所以才把它命名為番石榴。大約三百年前，大陸移民渡海來台，帶了番石榴到台灣種植，生產地集中在彰化、南投、嘉義、台南、高雄縣及宜蘭。</string>
	<string name="guava_season">四季均有產，盛產期9～11月，夏季芭樂催熟快易軟化。</string>
	<string name="guava_nutrition">芭樂為低熱量、高纖維、水分高，易有飽足感之水果，是糖尿病和減肥者的最佳選擇之一。因屬熱帶高維他命Ｃ水果，亦為天然美白的聖品，對於牙齦健康也有幫助。也是人體攝取維他命C最重要的來源；種子中鐵的含量為熱帶果實中最多的一種，因此吃時最好連種子細嚼慢嚥。有便秘習慣或內有火氣者不宜多吃。</string>
	<string name="guava_feature">芭樂種子多，類似中國的石榴而又名為「番石榴」，含有豐富的維生素C，同樣重量的芭樂與橘子，芭樂的維生素C含量是橘子的2倍。番石榴又名那拔、拔仔、芭樂，果肉微香，味甜，夏季成熟，分為甜味種及酸味種，甜味種糖度高，果肉甜脆，適合鮮食；酸味種可加工製果汁、果醬。此外尚可鹽漬、甘草漬、製罐、製蜜餞、果乾和製酒；葉片和未熟果曬乾研磨成末，可製成健康食品「拔仔茶」。</string>
	<string name="guava_pick">芭樂選購以中型果較好吃，硬度選硬不選軟，用手拿起來有份量者較佳；過軟皮色會變淡綠色，肉質變軟、爽脆度下降。喜歡軟熟果實者，宜選擇果實黃綠色、軟化者，而喜愛脆口感的人，宜選擇果皮青綠色，摸起來結實者為佳。</string>
	<string name="guava_remind">芭樂豐富的纖維素有助於促進消化、排除有害物質，但有便祕問題者應少吃，以免加重便秘狀況。通常吃芭樂時，種子太硬宜取除，以保護腸胃。番石榴不可用來拜拜，因為種子多，且種子不易消化，吃下去又拉出來，所以拿來拜拜顯得不尊貴。</string>
	<string name="kiwi_title">奇異果 Kiwi</string>
	<string name="kiwi_placeOfProduction">奇異果為獼猴喜食之物，所以又名為「獼猴桃」，原產於中國長江流域一帶，紐西蘭於 1905 年將奇異果引進，因形狀與顏色似紐西蘭的夜行性珍禽奇異鳥，加上二次大戰時紐西蘭大兵就被稱「Kiwis」，因此才有「奇異果」這個新潮的名稱。主要產區為義大利、法國、紐西蘭與中國。</string>
	<string name="kiwi_season">事實上，南北半球的氣溫差異，正好可以互補奇異果市場的需求，歐洲為每年11月～次年5月，紐西蘭則恰好相反。</string>
	<string name="kiwi_nutrition">奇異果除含豐富維他命 C、A、E、鉀、鎂、纖維素之外，更含其他水果少見的葉酸，二顆奇異果的熱量不到100卡，維生素C的含量卻比一顆柳橙多，鉀的含量比一根香蕉還多，而纖維含量比一份的麥片還更多。可調節免疫力，更是愛美女性及老年人的最佳選擇！</string>
	<string name="kiwi_feature">奇異果為小小綠色橢圓形水果，酸酸甜甜的滋味令人喜歡。一般常見除了綠色的奇異果，還有黃色的，叫作黃金奇異果，滋味比綠色奇異果甜，沒有酸味，相當受歡迎。</string>
	<string name="kiwi_pick">挑選時，注意奇異果表面絨毛要整齊，外皮自然散發光澤且無斑點、果實用手掌握拿時稍具彈性，若想要立即食用的話，就要挑選握起來稍軟的果實，表示馬上可以品嘗美味。回家後記得要放在冰箱以保持新鮮度，冰箱冷藏約可儲藏20~25天!!</string>
	<string name="kiwi_remind">若要讓奇異果快熟的話，將一個已熟香蕉、蘋果或水蜜桃與奇異果一起放入袋中，就會加速其成熟。奇異果一旦切片或切開，應馬上裝入密封的塑膠袋裡，再放入冰箱冷藏，以確保水分與營養。</string>
</resources>